--- a/templates/index.html
+++ b/templates/index.html
@@ -74,11 +74,11 @@
     </div>
 
     <div class="module">
-        <a href="{% url 'manage-dataset' %}"><h2>{% trans 'Chatbot Management' %}</h2></a>
+        <h1><a href="{% url 'manage-dataset' %}">&rsaquo;&rsaquo; {% trans 'Chatbot Management' %}</a></h1>
         <p>{% trans 'Create, train and run your chatbot here.' %}</p>
     </div>
     <div class="module">
-        <a href="{% url 'service-index' %}"><h2>{% trans 'Chatbot Service' %}</h2></a>
+        <h1><a href="{% url 'service-index' %}">&rsaquo;&rsaquo; {% trans 'Chatbot Service' %}</a></h1>
         <p>{% trans 'Check your chatbot service here.' %}</p>
     </div>
     </div>
